--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="main-content">
         <p><a href="https://travis-ci.org/rusith/Genie"><img src="https://travis-ci.org/rusith/Genie.svg?branch=core" alt="Build Status" /></a>
-            <a href="https://www.codacy.com/app/rusith/Genie?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=rusith/Genie&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/f502047d1b9043feaf8ec4463574bf51" alt="Codacy Badge" /></a></p>
+            <a href="https://api.codacy.com/project/badge/Grade/e324714bae3447daa66079f239cb287b)](https://www.codacy.com/app/rusith/Genie?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=rusith/Genie&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/f502047d1b9043feaf8ec4463574bf51" alt="Codacy Badge" /></a></p>
 
         <h3 id="dataaccesslayergenerator">Data Access Layer Generator</h3>
 
@@ -390,7 +390,7 @@
         ga('create', 'UA-106184053-1', 'auto');
         ga('send', 'pageview');
     </script>
-    
+
 </body>
 
 
