--- a/index.html
+++ b/index.html
@@ -10,15 +10,6 @@
     <link media="screen" href="stylesheets/stylesheet.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/github-light.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/css" type="text/css" rel="stylesheet">
-    <style type="text/css">
-        #share-buttons img {
-            width: 35px;
-            padding: 5px;
-            border: 0;
-            box-shadow: 0;
-            display: inline;
-        }
-    </style>
 </head>
 
 <body>
@@ -32,76 +23,78 @@
 
         <!-- I got these buttons from simplesharebuttons.com -->
         <div id="share-buttons">
+
             <!-- Buffer -->
             <a href="https://bufferapp.com/add?url=https://rusith.github.io/Genie&amp;text=Simple Share Buttons" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/buffer.png" alt="Buffer" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/buffer.png" alt="Buffer" />
+    </a>
 
             <!-- Digg -->
             <a href="http://www.digg.com/submit?url=https://rusith.github.io/Genie" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/diggit.png" alt="Digg" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/diggit.png" alt="Digg" />
+    </a>
 
             <!-- Email -->
             <a href="mailto:?Subject=Simple Share Buttons&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://rusith.github.io/Genie">
-                <img src="https://rusith.github.io/Genie/images/somacro/email.png" alt="Email" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
+    </a>
 
             <!-- Facebook -->
             <a href="http://www.facebook.com/sharer.php?u=https://rusith.github.io/Genie" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/facebook.png" alt="Facebook" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+    </a>
 
             <!-- Google+ -->
             <a href="https://plus.google.com/share?url=https://rusith.github.io/Genie" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/google.png" alt="Google" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
+    </a>
 
             <!-- LinkedIn -->
             <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://rusith.github.io/Genie" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/linkedin.png" alt="LinkedIn" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
+    </a>
 
             <!-- Pinterest -->
             <a href="javascript:void((function()%7Bvar%20e=document.createElement('script');e.setAttribute('type','text/javascript');e.setAttribute('charset','UTF-8');e.setAttribute('src','http://assets.pinterest.com/js/pinmarklet.js?r='+Math.random()*99999999);document.body.appendChild(e)%7D)());">
-                <img src="https://rusith.github.io/Genie/images/somacro/pinterest.png" alt="Pinterest" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/pinterest.png" alt="Pinterest" />
+    </a>
 
             <!-- Print -->
             <a href="javascript:;" onclick="window.print()">
-                <img src="https://rusith.github.io/Genie/images/somacro/print.png" alt="Print" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
+    </a>
 
             <!-- Reddit -->
             <a href="http://reddit.com/submit?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/reddit.png" alt="Reddit" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/reddit.png" alt="Reddit" />
+    </a>
 
             <!-- StumbleUpon-->
             <a href="http://www.stumbleupon.com/submit?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/stumbleupon.png" alt="StumbleUpon" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/stumbleupon.png" alt="StumbleUpon" />
+    </a>
 
             <!-- Tumblr-->
             <a href="http://www.tumblr.com/share/link?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/tumblr.png" alt="Tumblr" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/tumblr.png" alt="Tumblr" />
+    </a>
 
             <!-- Twitter -->
             <a href="https://twitter.com/share?url=https://rusith.github.io/Genie&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
                 target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/twitter.png" alt="Twitter" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+    </a>
 
             <!-- VK -->
             <a href="http://vkontakte.ru/share.php?url=https://rusith.github.io/Genie" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/vk.png" alt="VK" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/vk.png" alt="VK" />
+    </a>
 
             <!-- Yummly -->
             <a href="http://www.yummly.com/urb/verify?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
-                <img src="https://rusith.github.io/Genie/images/somacro/yummly.png" alt="Yummly" />
-            </a>
+        <img src="https://simplesharebuttons.com/images/somacro/yummly.png" alt="Yummly" />
+    </a>
+
         </div>
     </section>
 
@@ -468,10 +461,10 @@
     <!--Scripts-->
     <script>
         (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-106184053-1', 'auto');
