--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link media="screen" href="stylesheets/stylesheet.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/github-light.css" type="text/css" rel="stylesheet">
     <link media="screen" href="stylesheets/css" type="text/css" rel="stylesheet">
+    <style type="text/css">
+        #share-buttons img {
+            width: 35px;
+            padding: 5px;
+            border: 0;
+            box-shadow: 0;
+            display: inline;
+        }
+    </style>
 </head>
 
 <body>
@@ -461,10 +470,10 @@
     <!--Scripts-->
     <script>
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-106184053-1', 'auto');
