--- a/index.html
+++ b/index.html
@@ -443,7 +443,10 @@
         </div>
     </section>
 
-    <div class="fb-comments" data-href="https://rusith.github.io/Genie" data-width="600px" data-numposts="10"></div>
+    <div style="text-align: center;">
+            <div class="fb-comments" data-href="https://rusith.github.io/Genie" data-width="600px" data-numposts="10"></div>
+    </div>
+    
 
     <!--Scripts-->
     <script>
