Page Chanegs - Events

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
             </a>
 
             <!-- Facebook -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="http://www.facebook.com/sharer.php?u=https://rusith.github.io/Genie" target="_blank">
+            <a onclick="onShareButtonClick(this, 'Facebook')" href="http://www.facebook.com/sharer.php?u=https://rusith.github.io/Genie" target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
             </a>
 
             <!-- Google+ -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="https://plus.google.com/share?url=https://rusith.github.io/Genie" target="_blank">
+            <a onclick="onShareButtonClick(this, 'Google+')" href="https://plus.google.com/share?url=https://rusith.github.io/Genie" target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/google.png" alt="Google" />
             </a>
 
             <!-- LinkedIn -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://rusith.github.io/Genie" target="_blank">
+            <a onclick="onShareButtonClick(this, 'LinkedIn')" href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://rusith.github.io/Genie" target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
             </a>
 
@@ -66,18 +66,18 @@
             </a>
 
             <!-- Reddit -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="http://reddit.com/submit?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
+            <a onclick="onShareButtonClick(this, 'Reddit')" href="http://reddit.com/submit?url=https://rusith.github.io/Genie&amp;title=Simple Share Buttons" target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/reddit.png" alt="Reddit" />
             </a>
 
             <!-- Twitter -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="https://twitter.com/share?url=https://rusith.github.io/Genie&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
+            <a onclick="onShareButtonClick(this, 'Twitter')" href="https://twitter.com/share?url=https://rusith.github.io/Genie&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons"
                 target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
             </a>
 
             <!-- VK -->
-            <a onclick="onShareButtonClick(this, 'Email')" href="http://vkontakte.ru/share.php?url=https://rusith.github.io/Genie" target="_blank">
+            <a onclick="onShareButtonClick(this, 'VK')" href="http://vkontakte.ru/share.php?url=https://rusith.github.io/Genie" target="_blank">
                 <img src="https://simplesharebuttons.com/images/somacro/vk.png" alt="VK" />
             </a>
         </div>
@@ -459,9 +459,7 @@
 
         ga('create', 'UA-106184053-1', 'auto');
         ga('send', 'pageview');
-    </script>
 
-    <script type="text/javascript">
         function onShareButtonClick(obj, name)
         {
             var href = obj.getAttribute("href");
