--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="page-header">
         <img src="imgs/genie.png">
         <h1 class="project-name">Genie</h1>
-        <h2 class="project-tagline">Lightweight, High speed DAL Generator for .Net</h2>
+        <h2 class="project-tagline">Lightweight, Cross Platform, Open Source High speed Data Layer Generator for .Net and .Net Core</h2>
         <a class="btn" href="https://github.com/rusith/genie">View on GitHub</a>
         <a class="btn" href="https://github.com/rusith/Genie/releases">Download for Windows | Linux | Mac OSX</a>
         <h3 class="project-tagline" id="downloadcountdisplay"></h3>
