--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 
         <p>Genie has written in C# for .Net core framework</p>
 
+        <iframe width="854" height="480" src="https://www.youtube.com/embed/0Jl1XI7XSSI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+
         <h2 id="gettingstarted">Getting Started</h2>
 
         <ul>
