--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <section class="page-header">
-        <img src="imgs/genie.png">
+        <img src="imgs/genie_log.png" width="250px">
         <h1 class="project-name">Genie</h1>
         <h2 class="project-tagline">Lightweight, High speed DAL Generator for .Net</h2>
         <a class="btn" href="https://github.com/rusith/genie">View on GitHub</a>
