--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
     <section class="page-header">
-        <img src="imgs/genie_log.png" width="250px">
+        <img src="imgs/genie_logo.png" width="250px">
         <h2 class="project-tagline">Lightweight, Cross Platform, Open Source High speed Data Access Layer Generator for .Net and .Net Core</h2>
         <a class="btn" href="https://github.com/rusith/genie">View on GitHub</a>
         <a class="btn" href="https://github.com/rusith/Genie/releases">Download for Windows | Linux | Mac OSX</a>
