--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
         <p>The relative path to the project file from project path. this is an optional property. if this is provided the generator
             will process the project file.</p>
 
+        <h3 id="abstractModelsLocation">abstractModelsLocation (optional)</h3>
+
+        <p>Genie can generate set of interfaces for every relation and view in thee 
+            specified location.</p>
+
+        <h3 id="abstractModelsNamespace">abstractModelsNamespace (optional)</h3>
+
+        <p>Namespace of the generated interfaces. all interfaces will be in the same interface</p>
+
         <h3 id="enumsoptional">enums (optional)</h3>
 
         <p>List of table details that can be used as enums. if a table has predefined set of rows which need to be accessed
