--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     }(document, 'script', 'facebook-jssdk'));</script>
     <section class="page-header">
         <img src="imgs/genie_logo.png" width="250px">
-        <h2 class="project-tagline">Lightweight, Cross Platform, Open Source High speed Data Access Layer Generator for .Net and .Net Core</h2>
+        <h2 class="project-tagline">Lightweight, Cross Platform, Open Source High speed Data Access Layer Generator for .Net </h2>
         <a class="btn" href="https://github.com/rusith/genie">View on GitHub</a>
         <a class="btn" href="https://github.com/rusith/Genie/releases">Download for Windows | Linux | Mac OSX</a>
         <h3 class="project-tagline" id="downloadcountdisplay"></h3>
@@ -93,6 +93,11 @@
 
         <p>Genie has written in C# for .Net core framework</p>
 
+        <p>
+            Genie can create a .Net standard class library that can be used as an interface to access any 
+            relational databse.
+        </p>
+
         <h2 id="gettingstarted">Getting Started</h2>
 
         <ul>
@@ -130,20 +135,10 @@
 
         <p>The base namespace of the data access layer (ex :Example.DataAccess)</p>
 
-        <h3 id="nodapper">noDapper</h3>
-
-        <p> Include the dapper source code in the generated code (/Dapper) Dapper will not be included if set to true . will
-            need to reference dapper externally. <b>This must be true if core is true.</b></p>
-
-        <h3 id="core">core</h3>
-
-        <p>If this is set to true , the generated code will target .net core framework. This uses .Net cores inbuilt DI. the
-            DapperContext should be injected to use connection string.</p>
-
         <h3 id="projectfileoptional">projectFile (optional)</h3>
 
         <p>The relative path to the project file from project path. this is an optional property. if this is provided the generator
-            will process the project file.</p>
+            will add necessary packages to the project file. and if the project file is not there , Genie will create it</p>
 
         <h3 id="abstractModelsLocation">abstractModelsLocation (optional)</h3>
 
