--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section class="page-header">
         <img src="imgs/genie_logo.png" width="250px">
         <h2 class="project-tagline">Lightweight, Cross Platform, Open Source High speed Data Access Layer Generator for .Net </h2>
-        <a class="btn" href="https://github.com/rusith/genie">View on GitHub</a>
-        <a class="btn" href="https://github.com/rusith/Genie/releases">Download for Windows | Linux | Mac OSX</a>
+        <a class="btn" href="https://github.com/divicent/genie">View on GitHub</a>
+        <a class="btn" href="https://github.com/divicent/Genie/releases">Download for Windows | Linux | Mac OSX</a>
         <h3 class="project-tagline" id="downloadcountdisplay"></h3>
 
         <!-- I got these buttons from simplesharebuttons.com -->
@@ -88,11 +88,11 @@
 
     <section class="main-content">
         <p>
-            <a href="https://travis-ci.org/rusith/Genie">
-                <img src="https://travis-ci.org/rusith/Genie.svg?branch=core" alt="Build Status" />
+            <a href="https://travis-ci.org/divicent/Genie">
+                <img src="https://travis-ci.org/divicent/Genie.svg?branch=core" alt="Build Status" />
             </a>
-            <a href="https://www.codacy.com/app/rusith/Genie?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=rusith/Genie&amp;utm_campaign=Badge_Grade">
-                <img src="https://api.codacy.com/project/badge/Grade/e324714bae3447daa66079f239cb287b" />
+            <a href="https://www.codacy.com/app/divicent/Genie?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=divicent/Genie&amp;utm_campaign=Badge_Grade">
+                <img src="https://api.codacy.com/project/badge/Grade/9bf8783c18c6417f82e2d3b2c6ae5fe6" />
             </a>
         </p>
 
@@ -321,7 +321,7 @@
     </section>
 
     <div style="text-align: center;">
-        <div class="fb-comments" data-href="https://rusith.github.io/Genie" data-width="800px" data-numposts="10"></div>
+        <div class="fb-comments" data-href="https://divicent.github.io/Genie" data-width="800px" data-numposts="10"></div>
     </div>
 
 
